# Filencryp

./: Cargo.toml  README.md  README.org
src/: args.rs  lib.rs  main.rs  read.rs  write.rs
