[package]
name = "pvcrypt"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
rand = "0.8.5"
crossbeam = "0.8.4"
crossterm = "0.27.0"
aes-gcm = "0.10.3"
aes-gcm-stream = "0.2.4"
zeroize = "1.8.1"